# © 2026 Strategos. All rights reserved.
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sila"
version = "1.0.0"
description = "Sila (Sierra) — part of the Strategos Suite. Install sila-sierra for the full package."
readme = "README.md"
license = { text = "MIT" }
authors = [
  { name = "ShadowStrike", email = "r@strategos.au" }
]
keywords = ["strategos", "shadowstrike", "forensics", "sila"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.11"
dependencies = [
  "sila-sierra",
]

[project.urls]
Homepage = "https://strategos.au"
Repository = "https://github.com/ShadowStrike-CTF/shadowstrike-suite"

[tool.hatch.build.targets.wheel]
packages = ["src/sila"]
